$Id: ChangeLog,v 1.136 2007-10-17 00:56:20 cmatsuoka Exp $

Stable versions
---------------

2.4.0 ():
	- added Oktalyzer note slide and fine note slide effects
	- added Oktalyzer arpeggio 3, arpeggio 4 and arpeggio 5 effects
	- added MED synth programmable arpeggio commands ARP and ARE
	- added MED synth vibrato commands VBS, VBD and VWF
	- added module probe method without loading (Audacious plugin can
	  test for files while a module is playing)
	- added persistent effects for 669, FNK and FAR
	- fixed MED synth volume slide commands CHD and CHU
	- fixed detuning in short samples with bidirectional loop by adjusting
	  the loop size to match forward loop size
	- fixed sound cut bug when changing samples in the MED synth (don't
	  reset channel on attempt to set invalid sample position)
	- fixed identification of IIgs MegaTracker modules
	- fixed 669 persistent vibrato and portamento effects
	- fixed FAR persistent vibrato/portamento and pattern break effects
	- fixed sample loading in FAR modules
	- revert CoreAudio driver pause patch (fix memory management problem)
	- reset MED synth program at each new note event
	- removed filesize-based module format detection
	- replaced XANN loader with Prowizard XANN depacker
	- reorganized internal data to remove lots of global variables

2.3.2 (20071009):
	- added ModPlug Tracker IT quirk: ignore sample global volume (fixes
	  speech in "Deep In Her Eyes Remake", reported by Douglas Carmichael)
	- added PTM/IMF note slide effects and PTM note slide + retrig effect
	- added partial support to MED synth sounds (ported from xmp 2.1.0)
	- added experimental BeOS driver based on the CoreAudio driver
	- fixed copy of overlapping memory areas in IT loader
	- fixed initialization of channel flags before loading module
	- fixed PTM sample loop size (tested with abnormality.ptm)
	- fixed PTM effects translation (PTM-specific effects were ignored)
	- fixed effects settings in AIX and OSX CoreAudio drivers (reported